# m0er1tz-tic

./: Cargo.toml  README.md
docs/: index.html  tictactoe_web-86bd856e4ba26f94_bg.wasm  tictactoe_web-d242a7180b9e850e.js  tictactoe_web-d242a7180b9e850e_bg.wasm  tictactoe_web-e15f4c62abe4f31a.js  tictactoe_web-e15f4c62abe4f31a_bg.wasm
src/: lib.rs  main.rs  min.css  restart.css
