[package]
name = "tictactoe_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
stylist = {version="0.12.0", features=["yew", "parser"]}
web-sys = "0.3.61"
yew = {version = "0.20.0", features=["csr"]}
getrandom = { version = "0.2", features = ["js"] }
